--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   get: ^4.7.2
   shared_preferences: ^2.5.3
   dio: ^5.8.0+1
+  google_sign_in: ^6.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
