--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   shared_preferences: ^2.5.3
   dio: ^5.8.0+1
   google_sign_in: ^6.3.0
+  fl_chart: ^0.66.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
