--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   dio: ^5.8.0+1
   google_sign_in: ^6.3.0
   fl_chart: ^0.66.2
+  sqflite: ^2.3.2
+  path: ^1.8.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
