--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  get: ^4.7.2
+  get: ^4.6.6
   shared_preferences: ^2.5.3
   dio: ^5.8.0+1
   google_sign_in: ^6.3.0
   fl_chart: ^0.66.2
-  sqflite: ^2.3.2
+  sqflite: ^2.3.0
   path: ^1.8.3
+  http: ^1.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
